samples/_failures_safe/1761507304_d32e24_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4574c658.c: In function ‘print_shortest_paths’:
./samples/SAFE/__tmp_4574c658.c:176:12: error: missing terminating " character
  176 |     printf("Shortest paths from node %d:\
      |            ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_4574c658.c:176:5: error: expected expression at end of input
  176 |     printf("Shortest paths from node %d:\
      |     ^~~~~~
./samples/SAFE/__tmp_4574c658.c:176:5: error: expected declaration or statement at end of input
